--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -14,4 +14,4 @@
 %></p>
 <p><%= "-Your Coach" %></p>
 
-<%= link_to "Ask a new question", ask_path %>
+<%= link_to "Ask a new question!", ask_path %>
